add many changes and fixed bugs

--- a/templates/about.html
+++ b/templates/about.html
@@ -1,7 +1,7 @@
-{% include "index.html" %}
+{% extends "index.html" %}
 {%block content%}
 <h2>Цікавинка: я хочу зробити особливу зарядку але про це шшшшшш</h2>
-<img src="..." alt="фото не знайдено вопше" width="500px" height="500px">
+<img src="/static/{{user[2]}}" alt="фото не знайдено вопше" width="400px" height="300px">
 <p>
     {{user[6]}}
 </p>
