--- a/templates/menu.html
+++ b/templates/menu.html
@@ -1,21 +1,26 @@
 <header>
-    <nav>
-        <ul>
-            <li>
-                <a href="/">На головне</a>
-            </li>
-            <li>
-                <a href="/about">Про мене тут нічо нема🤫</a>
-            </li>
-            <li>
-                <a href="post/category/programming">Програмування</a>
-            </li>
-            <li>
-                <a href="post/category/art">Моє мистецтво</a>
-            </li>
-            <li>
-                <a href="post/category/games">Топові ігри</a>
-            </li>
-        </ul>
+    <nav class="navbar navbar-expand-lg bg-secondary-subtle">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="/">Головна</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="/about">Про мене</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/post/category/programming">Програмування</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/post/category/me">Мої геніальні думки</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/post/category/cars">Машини</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
     </nav>
 </header>
